--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
   database: NEWSBOARD_production
   username: NEWSBOARD
   password: <%= ENV["NEWSBOARD_DATABASE_PASSWORD"] %>
